2023-01-11  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Fixed Monochromatic bilevel WPG should answer to 
	gm identify file.wpg ..... PseudoClass 2c 8-bit

2023-01-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Fixed deffect in WPG header reading.

2023-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Use lower-case raw profile
	identifiers (e.g. 'Raw profile type xmp') because exiftool expects
	that.  Partially addresses concerns raised by SourceForge bug #682
	"Invalid storage of XMP in PNGs".

	* www/INSTALL-unix.rst: Add notes about required libjxl versions.

	* README.txt: Add notes about required libjxl versions.

2023-01-08 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Added new tests for WEBP, BMP2 & BMP3.
	These tests are passing.

2023-01-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated the news.

	* It is 2023 now!  Update copyrights, rotate changelogs, etc.

	* magick/blob.c (OpenBlob): Zlib has never supported opening Unix
	'compress' .Z files (although gzip does).  So don't open such
	files using zlib.

	* coders/sun.c: Add IM1, IM8, and IM24 magick aliases for Sun
	Raster format since those are the historically correct extensions.

2023-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c (ReadSUNImage): Address oss-fuzz 54810
	"graphicsmagick:coder_SUN_fuzzer: Heap-buffer-overflow in
	ReadSUNImage".

	* coders/pict.c (WritePICTImage): Fix use of logical operator
	where binary operator is needed.

2023-01-05 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/installer/inc/body.isx 64 bit distribution MUST NOT
	be installed on pure 32 bit system. Sanity check added.

2023-01-05 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/installer/inc/body.isx
	* VisualMagick/installer/inc/files-dlls.isx
	(VisualMagick/installer/redist/VC2008SP1/vcredist_x64.exe must be downloaded from www).