@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230111"
-#define public MagickPackageReleaseDate "snapshot-20230111"
+#define public MagickPackageVersionAddendum ".020230113"
+#define public MagickPackageReleaseDate "snapshot-20230113"
