@@ -1,6 +1,10 @@
+2023-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/jxl.c (ReadJXLImage): Cache and trace extra channel info.
+
 2023-01-11  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
-	* coders/wpg.c Fixed Monochromatic bilevel WPG should answer to 
+	* coders/wpg.c Fixed Monochromatic bilevel WPG should answer to
 	gm identify file.wpg ..... PseudoClass 2c 8-bit
 
 2023-01-08  Fojtik Jaroslav  <JaFojtik@yandex.com>
